--- a/SchoolAgenda/Main.storyboard
+++ b/SchoolAgenda/Main.storyboard
@@ -17,21 +17,21 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                             </adBannerView>
                             <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="perfil.png" id="IC1-au-IOe" userLabel="imgBckg">
-                                <rect key="frame" x="16" y="80" width="94" height="93"/>
+                                <rect key="frame" x="26" y="97" width="84" height="76"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alejandra Bautista" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="D5U-Xh-YEn">
-                                <rect key="frame" x="129" y="96" width="160" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alejandra Bautista" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="D5U-Xh-YEn" userLabel="lblUser">
+                                <rect key="frame" x="97" y="102" width="207" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="GeezaPro" family="Geeza Pro" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UAG" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="JVy-dh-9nZ">
-                                <rect key="frame" x="136" y="116" width="160" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Universidad Autonoma de Guadalajara" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="JVy-dh-9nZ" userLabel="lblSchool">
+                                <rect key="frame" x="97" y="131" width="213" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="STHeitiTC-Light" family="Heiti TC" pointSize="12"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -40,13 +40,17 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Agenda Escolar" id="xFc-Ye-DdO">
-                                        <barButtonItem key="leftBarButtonItem" image="settings.png" id="vGG-wJ-Oed"/>
+                                        <barButtonItem key="leftBarButtonItem" image="settings.png" id="vGG-wJ-Oed">
+                                            <connections>
+                                                <segue destination="z3J-PL-gRu" kind="modal" identifier="xxx" id="BPd-se-O9g"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="63" sectionHeaderHeight="22" sectionFooterHeight="22" id="eJW-JV-1ok" userLabel="tblMain">
-                                <rect key="frame" x="61" y="242" width="259" height="277"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <rect key="frame" x="51" y="242" width="259" height="277"/>
+                                <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell alpha="0.5" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellAgenda" rowHeight="63" id="ojT-Ja-9Iv" userLabel="cellAgenda" customClass="cellAgenda">
@@ -94,14 +98,17 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
+                        <outlet property="imgBckg" destination="IC1-au-IOe" id="ndX-OO-c1P"/>
+                        <outlet property="lblSchool" destination="JVy-dh-9nZ" id="QOT-Ec-jH9"/>
+                        <outlet property="lblUser" destination="D5U-Xh-YEn" id="F0o-xy-yHQ"/>
                         <outlet property="tblMain" destination="eJW-JV-1ok" id="eoB-Y7-CH8"/>
-                        <segue destination="z3J-PL-gRu" kind="modal" identifier="segueRegistroUs" id="4IY-cW-yoH"/>
-                        <segue destination="lH4-Yh-zL2" kind="modal" identifier="sss" id="F27-Ai-tgg"/>
+                        <segue destination="z3J-PL-gRu" kind="modal" identifier="segueHomeToUser" id="4IY-cW-yoH"/>
+                        <segue destination="HTu-F9-I5T" kind="modal" identifier="segueHomeToSubjects" id="7xG-Zw-GTl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="142" y="272"/>
+            <point key="canvasLocation" x="-359" y="48"/>
         </scene>
         <!--Add User-->
         <scene sceneID="w8U-Ut-yLI">
@@ -158,7 +165,11 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Registro" id="DO5-W6-Ml3" userLabel="lblTitle">
-                                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="JoC-z9-6FX" userLabel="nbtnBack"/>
+                                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="JoC-z9-6FX" userLabel="nbtnBack">
+                                            <connections>
+                                                <segue destination="vXZ-lx-hvc" kind="modal" identifier="segueUserToHome" id="kP4-x6-eYX"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -243,32 +254,43 @@
                         <outlet property="txtName" destination="14Z-o7-EOd" id="2VX-mm-d7c"/>
                         <outlet property="txtPassword" destination="XaK-Cs-Rg7" id="I15-6P-KFF"/>
                         <outlet property="txtSchool" destination="8cM-bs-iNc" id="Emy-Ks-xzG"/>
-                        <segue destination="vXZ-lx-hvc" kind="modal" identifier="segueToUsFromHome" id="X2X-kP-ON4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vsG-Mg-oIn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="762" y="-648"/>
+            <point key="canvasLocation" x="386" y="-1300"/>
         </scene>
-        <!--View Controller-->
+        <!--List Subjects-->
         <scene sceneID="Uhy-tg-Li6">
             <objects>
-                <viewController id="HTu-F9-I5T" sceneMemberID="viewController">
+                <viewController id="HTu-F9-I5T" customClass="ListSubjects" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AmJ-Ae-Ojp">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="fUX-gs-TTm" userLabel="tblMaterias">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="fUX-gs-TTm" userLabel="tblSubjects">
                                 <rect key="frame" x="0.0" y="76" width="320" height="492"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Frf-1j-lku" userLabel="cellMaterias">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellSubjects" rowHeight="44" id="Frf-1j-lku" customClass="cellSubjects">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Frf-1j-lku" id="ek1-Kg-MRf">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Gj5-cM-Ogu" userLabel="lblSubjects">
+                                                    <rect key="frame" x="8" y="0.0" width="287" height="35.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="lblSubjects" destination="Gj5-cM-Ogu" id="Odd-TH-iMw"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -277,8 +299,16 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Materias" id="SoT-rk-HOv">
-                                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="Le2-5D-dm1" userLabel="nbtnBack"/>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="jnQ-wM-FMi" userLabel="nbtnAdd"/>
+                                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="Le2-5D-dm1" userLabel="nbtnBack">
+                                            <connections>
+                                                <segue destination="vXZ-lx-hvc" kind="modal" identifier="sugueListObjToHome" id="4ws-Mz-Fn1"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="jnQ-wM-FMi" userLabel="nbtnAdd">
+                                            <connections>
+                                                <segue destination="lH4-Yh-zL2" kind="modal" identifier="segueListSubToAddSubj" id="Dhf-0Y-Y2b"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -288,10 +318,13 @@
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="tableView" destination="fUX-gs-TTm" id="8HG-Q0-HNh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aah-3d-NXY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="511" y="259"/>
+            <point key="canvasLocation" x="819" y="-345"/>
         </scene>
         <!--Add Subjects-->
         <scene sceneID="4nI-Mf-WAW">
@@ -306,7 +339,11 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Registro Materia" id="bp7-LM-Qmx">
-                                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="jmM-QX-M3Q" userLabel="nbtnBack"/>
+                                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="jmM-QX-M3Q" userLabel="nbtnBack">
+                                            <connections>
+                                                <segue destination="HTu-F9-I5T" kind="modal" identifier="segueAddSubToListSub" id="9rR-Np-6Nw"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -389,7 +426,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XPF-PH-139" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="901" y="259"/>
+            <point key="canvasLocation" x="1564" y="-1125"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="0Pm-aD-JeK">
@@ -478,7 +515,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vRm-hj-4ef" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1267" y="259"/>
+            <point key="canvasLocation" x="1583" y="-156"/>
         </scene>
     </scenes>
     <resources>
@@ -491,4 +528,9 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="4ws-Mz-Fn1"/>
+        <segue reference="7xG-Zw-GTl"/>
+        <segue reference="BPd-se-O9g"/>
+    </inferredMetricsTieBreakers>
 </document>
