--- a/SchoolAgenda/Main.storyboard
+++ b/SchoolAgenda/Main.storyboard
@@ -1298,9 +1298,9 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="HAs-Sv-j5R"/>
-        <segue reference="2ar-EA-lCx"/>
-        <segue reference="JlO-pM-dxe"/>
+        <segue reference="1Fc-DY-fl2"/>
         <segue reference="Xjz-IV-eWm"/>
         <segue reference="7xG-Zw-GTl"/>
+        <segue reference="JlO-pM-dxe"/>
     </inferredMetricsTieBreakers>
 </document>
